[package]
name = "kvs"
version = "0.1.0"
authors = ["TheR1sing3un <ther1sing3un@163.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
failure = "*"
serde = { version = "1.0", features = ["derive"] }
bincode = "*"
lazy_static = "*"
log = "*"
env_logger = "*"
bytes = "*"
tokio = { version = "1", features = ["full"] }
dashmap = "*"
sled = "*"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand = "0.6.5"
criterion = "0.3"
